examples/fake-service-OSS/web/init-consul-config/apigw-route-web.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: route-root
  namespace: web
spec:
  parentRefs:
  - name: api-gateway
    namespace: consul
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
      - type: ExtensionRef
        extensionRef:
          group: consul.hashicorp.com
          kind: RouteTimeoutFilter
          name: web-route-timeout-filter
    backendRefs:
    - kind: MeshService
      group: consul.hashicorp.com
      name: web
      namespace: web
      port: 9091
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: route-web
  namespace: web
spec:
  parentRefs:
  - name: api-gateway
    namespace: consul
  rules:
  - matches:
    - path:
        type: Exact
        value: /ui
    filters:
      - type: ExtensionRef
        extensionRef:
          group: consul.hashicorp.com
          kind: RouteTimeoutFilter
          name: web-route-timeout-filter
      - type: URLRewrite
        urlRewrite:
          path:
            replacePrefixMatch: /ui
            type: ReplacePrefixMatch
    backendRefs:
    - kind: MeshService
      group: consul.hashicorp.com
      name: web
      namespace: web
      port: 9091
